--- a/vscode_settings.json
+++ b/vscode_settings.json
@@ -1,16 +1,28 @@
 {
-    "files.autoSave": "onFocusChange",
-    "editor.fontFamily": "MesloLGS NF",
-    "editor.fontSize": 13,
-    "editor.lineHeight": 2,
     "workbench.iconTheme": "material-icon-theme",
     "workbench.productIconTheme": "material-product-icons",
     "workbench.colorTheme": "GitHub Dark",
-    "tabnine.experimentalAutoImports": true,
-    "python.analysis.extraPaths": [],
-    "python.analysis.completeFunctionParens": true,
+    "security.workspace.trust.untrustedFiles": "open",
+    "files.autoSave": "onFocusChange",
+    "editor.fontSize": 13,
+    "editor.lineHeight": 2,
+    "editor.fontFamily": "MesloLGS NF",
+    "editor.bracketPairColorization.enabled": true,
+    "editor.guides.bracketPairs": "active",
+    "editor.suggestSelection": "first",
     "terminal.integrated.cursorStyle": "line",
-    "terminal.integrated.fontSize": 12,
+    "terminal.integrated.fontSize": 13,
     "terminal.integrated.fontFamily": "MesloLGS NF",
-    "terminal.integrated.lineHeight": 1.4
+    "terminal.integrated.lineHeight": 1.4,
+    "terminal.integrated.letterSpacing": 1.3,
+    "terminal.integrated.fontWeightBold": "normal",
+    "terminal.integrated.defaultProfile.linux": "zsh",
+    "git.ignoreLegacyWarning": true,
+    "git.confirmSync": false,
+    "git.autofetch": true,
+    "remote.SSH.path": "C:\\Windows\\System32\\OpenSSH\\ssh.exe",
+    "remote.SSH.remotePlatform": {
+        "LZ36": "linux"
+    },
+    "tabnine.experimentalAutoImports": true
 }
