--- a/pip.conf
+++ b/pip.conf
@@ -3,11 +3,15 @@
 
 [global]
 timeout = 60
-index-url = https://mirrors.aliyun.com/pypi/simple/
+index-url = https://mirrors.aliyun.com/pypi/simple
 extra-index-url =
+    https://mirrors.cloud.aliyuncs.com/pypi/simple
     https://mirrors.zju.edu.cn/pypi/simple
     https://pypi.tuna.tsinghua.edu.cn/simple
-    https://pypi.doubanio.com/simple/
+    https://pypi.doubanio.com/simple
+    https://pypi.mirrors.ustc.edu.cn/simple
+    https://mirrors.bfsu.edu.cn/pypi
+
 
 [install]
 trusted-host =
@@ -15,3 +19,6 @@ trusted-host =
     mirrors.zju.edu.cn
     pypi.tuna.tsinghua.edu.cn
     pypi.doubanio.com
+    pypi.mirrors.ustc.edu.cn
+    mirrors.cloud.aliyuncs.com
+    mirrors.bfsu.edu.cn
