--- a/pip.conf
+++ b/pip.conf
@@ -3,22 +3,17 @@
 
 [global]
 timeout = 60
-index-url = https://mirrors.aliyun.com/pypi/simple
+index-url = https://mirrors.tuna.tsinghua.edu.cn/pypi/
 extra-index-url =
-    https://mirrors.cloud.aliyuncs.com/pypi/simple
-    https://mirrors.zju.edu.cn/pypi/simple
-    https://pypi.tuna.tsinghua.edu.cn/simple
-    https://pypi.doubanio.com/simple
-    https://pypi.mirrors.ustc.edu.cn/simple
-    https://mirrors.bfsu.edu.cn/pypi
-
+    https://mirrors.bfsu.edu.cn/pypi/
+    https://mirrors.aliyun.com/pypi/simple/
+    https://mirrors.cloud.tencent.com/pypi/simple/
+    https://mirrors.ustc.edu.cn/pypi/simple/
 
 [install]
 trusted-host =
-    mirrors.aliyun.com
-    mirrors.zju.edu.cn
-    pypi.tuna.tsinghua.edu.cn
-    pypi.doubanio.com
-    pypi.mirrors.ustc.edu.cn
-    mirrors.cloud.aliyuncs.com
+    mirrors.tuna.tsinghua.edu.cn
     mirrors.bfsu.edu.cn
+    mirrors.aliyun.com
+    mirrors.cloud.tencent.com
+    mirrors.ustc.edu.cn
